remove ProgressIndicator from PreloadingActivity API
GitOrigin-RevId: c60fdf10def549a82ba15f893f6b10db17bc9ace